--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-baseurl: /test-live
+title:          Muhamamd Rusdi
+locale:         id_ID
+url:            http://muhrusdi.github.io
+#baseurl:       /test-live
+
+permalink:      /:categories/:title/
