--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:          Muhamamd Rusdi
 locale:         id_ID
-url:            http://muhrusdi.github.io
-#baseurl:       /test-live
+url:            https://muhrusdi.github.io
+baseurl:       /test-live
 
-permalink:      /:categories/:title/
+#permalink:      /:categories/:title/
